Updated Error return record

--- a/devGithub/force-app/main/default/classes/AccountHandler.cls
+++ b/devGithub/force-app/main/default/classes/AccountHandler.cls
@@ -3,7 +3,7 @@ public with sharing class AccountHandler {
         try {
             Account acct = new Account(Name=param);
             insert acct;
-            return acct.Id;
+            return acct;
         } catch (DmlException e) {
             System.debug('A DML exception has occurred: ' +
                         e.getMessage());
